--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
